--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@ Enjoy scrumptious meals at Global Fun City.</p>
 
 <div class="contact-for-more">
 	<h3>Contact</h3>
-	<p>+1 860 817 1080</p>
-	<p>info@globalfuncity.in</p>
+	<a href="tel: +1 8608171080"> <p>+1 860 817 1080</p></a>
+	<a href="mailto:info@globalfuncity.in"><p>info@globalfuncity.in</p> </a>
 </div>
 </div>
 
@@ -258,7 +258,7 @@ Enjoy scrumptious meals at Global Fun City.</p>
 	</div>
 	<hr>
 	<div class="copyright">
-	<p> &#169; Global Fun City , All rights Reserved.
+	<p> &#169; Global Fun City, All rights Reserved.
         <br>Site designed by Vignesh.in</p>
 	</div>
 </footer>
