--- a/pages/nav_pages_for_user_profile_book/events_user_profile.html
+++ b/pages/nav_pages_for_user_profile_book/events_user_profile.html
@@ -31,7 +31,7 @@
 		</div>	
 		
 		<div class="sign-in">
-            <p><a href="../../pages/homepage/profile.html"> Welcome, Tommy! </a> &nbsp;|  <a href="../../index.html"> Sign Out</a> <i class="fa-solid fa-globe"></i> United states (English)</p>
+            <p><a href="../../pages/homepage/main.profile.html"> Welcome, Tommy! </a> &nbsp;|  <a href="../../index.html"> Sign Out</a> <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 		</div>
