--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -42,7 +42,10 @@
 	<a href="../../pages/shop/cart.html"> <i class="fa-solid fa-bag-shopping"></i> &nbsp; My Bag (2)</a>
 </div>
 </div>
-<hr>
+
+<div class="words">
+	<h1> <span class="shop-span">Shop. </span> The best way to buy the  <h2 class="h2-love">products  you love.</h2></h1>
+</div>
 
 <!-- div for next products items in navbar -->
  
@@ -166,17 +169,17 @@
 <div class="circle">
 	<div class="circle-all">
 		<h2>Clothing</h2>
-		<a href="">Shop Now </a>
+		<a href="../../pages/shop/clothing.html">Shop Now </a>
 	</div>
 
 	<div class="circle-all">
 		<h2>Accessories</h2>
-		<a href="">Shop Now</a>
+		<a href="../../pages/shop/accessories.html">Shop Now</a>
 	</div>
 
 	<div class="circle-all">
 		<h2>Home</h2>
-		<a href="">Shop Now</a>
+		<a href="../../pages/shop/home.html">Shop Now</a>
 	</div>
 </div>
 
