--- a/pages/nav_pages_for_user_profile_book/about_user_profile.html
+++ b/pages/nav_pages_for_user_profile_book/about_user_profile.html
@@ -32,7 +32,7 @@
 		
 		<div class="sign-in">
 			
-            <p><a href="../../pages/homepage/profile.html"> Welcome, Tommy! </a>&nbsp; | <a href="../../index.html"> Sign Out</a>  <i class="fa-solid fa-globe"></i> United states (English)</p>
+            <p><a href="../../pages/homepage/main.profile.html"> Welcome, Tommy! </a>&nbsp; | <a href="../../index.html"> Sign Out</a>  <i class="fa-solid fa-globe"></i> United states (English)</p>
 		</div>
 		
 	</div>
@@ -102,6 +102,66 @@
 <h2>First Aid</h2>
 </div>
 
+
+<!-- faq started -->
+<div class="background">
+	<section class="main-faq">
+		<h2 class="title">FAQs</h2>
+		<div class="faq">
+			<div class="question">
+				<h3>How can I pay for a ticket?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>There are tickets on our website. You can buy a ticket or book a seat online.
+					 You can pay using an e-wallet, as well as Visa or Master Card. We will send you a ticket electronically or in hard copy.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 2nd question -->
+		
+		<div class="faq">
+			<div class="question">
+				<h3>Are there any age restrictions for rides and attractions?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>Yes, there are age and height restrictions for many rides and attractions in the amusement park.
+					 It's best to check the park's website or consult the park's staff for more information.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 3rd question -->
+		<div class="faq">
+			<div class="question">
+				<h3> Are there any food and drink options available in the amusement park?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>Yes, We have a variety of food and drink options available. 
+					Soft drinks, ice creams and bottled potable water are also available at all the food courts and scattered kiosks.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 4th question -->
+		<div class="faq">
+			<div class="question">
+				<h3>What is the cost of admission? Are there any discounts available?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>The cost of admission to the park depends on the type of ticket and the age of the guest.
+					We offer discounts for seniors, military personnel, and groups. Please visit our website for pricing information.</p>
+			</div>
+		</div>
+	<hr>
+	</section>
+	</div>
+	<!-- faq completed -->
 
 <section class="best-celebration-for-you">
 	<div class="gaiety-holiday">
