--- a/pages/other pages/attractions.html
+++ b/pages/other pages/attractions.html
@@ -140,7 +140,7 @@
 </div>
 
 <div class="content">
-    <h2>Drop in With your Family for a World Class Experience. </h2>
+    <h2>Drop in With your Family For a World Class Experience. </h2>
 </div>
 </div>
 
