--- a/pages/other pages/home.html
+++ b/pages/other pages/home.html
@@ -134,6 +134,67 @@
 </div>
 
 
+<!-- faq started -->
+<div class="background">
+	<section class="main-faq">
+		<h2 class="title">FAQs</h2>
+		<div class="faq">
+			<div class="question">
+				<h3>How can I pay for a ticket?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>There are tickets on our website. You can buy a ticket or book a seat online.
+					 You can pay using an e-wallet, as well as Visa or Master Card. We will send you a ticket electronically or in hard copy.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 2nd question -->
+		
+		<div class="faq">
+			<div class="question">
+				<h3>Are there any age restrictions for rides and attractions?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>Yes, there are age and height restrictions for many rides and attractions in the amusement park.
+					 It's best to check the park's website or consult the park's staff for more information.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 3rd question -->
+		<div class="faq">
+			<div class="question">
+				<h3> Are there any food and drink options available in the amusement park?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>Yes, We have a variety of food and drink options available. 
+					Soft drinks, ice creams and bottled potable water are also available at all the food courts and scattered kiosks.</p>
+			</div>
+		</div>
+	<hr>
+		<!-- 4th question -->
+		<div class="faq">
+			<div class="question">
+				<h3>What is the cost of admission? Are there any discounts available?</h3>
+				<i class="fa-solid fa-plus"></i>
+			</div>
+	
+			<div class="answer">
+				<p>The cost of admission to the park depends on the type of ticket and the age of the guest.
+					We offer discounts for seniors, military personnel, and groups. Please visit our website for pricing information.</p>
+			</div>
+		</div>
+	<hr>
+	</section>
+	</div>
+	<!-- faq completed -->
+
+
 <section class="best-celebration-for-you">
 	<div class="gaiety-holiday">
 		<h2>G A I E T Y  H O L I D A Y</h2>
@@ -224,7 +285,7 @@
 			
 			
 		</div>
-		<hr>
+		<hr class="footer-hr">
 		<div class="copyright">
 		<p>Global Fun City &#169; 2022. All rights Reserved.
 			<br>Site designed by Vignesh.in</p>
@@ -232,6 +293,8 @@
 	</footer>
 
 	<script>
+
+		// sidebar for mobile started
 		function openNav() {
 		  document.getElementById("mySidenav").style.width = "250px";
 		}
@@ -239,6 +302,18 @@
 		function closeNav() {
 		  document.getElementById("mySidenav").style.width = "0";
 		}
+		// sidebar for mobile completed
+
+
+	    // faq started
+	    const faqs = document.querySelectorAll(".faq");
+
+	    faqs.forEach(faq => {
+		    faq.addEventListener("click", () => {
+			    faq.classList.toggle("active");
+		    });
+	    });
+		// faq closed
 		</script>
 
 		</body>
