--- a/pages/upcoming events/festivel-of-colours.html
+++ b/pages/upcoming events/festivel-of-colours.html
@@ -71,22 +71,29 @@
     <h1>Festival Countdown</h1>
 </div>
 
-<div class="numbers">
-    <h3>499 </h3>
-    <h3>:</h3>
-    <h3>21 </h3>
-    <h3>:</h3>
-    <h3>17  </h3>
-    <h3>:</h3>
-    <h3>55 </h3>
-</div>
-
-<div class="days">
-    <p>Days</p>
-    <p>Hours</p>
-    <p>Minutes </p>
-    <p>Seconds</p>
-</div>
+<section class="container">
+	<div class="timer-container">
+		<p><span id="days"></span> <br>
+			<span> <b>Days</b> </span>
+		</p>
+		<span class="columns"></span>
+	
+		<p><span id="hours"></span> <br>
+			<span><b>Hours</b></span>
+		</p>
+		<span class="columns"></span>
+	
+		<p><span id="minutes"></span> <br>
+			<span><b>Minutes</b></span>
+		</p>
+		<span class="columns"></span>
+	
+		<p><span id="seconds"></span> <br>
+			<span><b>Seconds</b></span>
+		</p>
+	
+	</div>
+	</section>
 
 <div class="background-color-2">
 <iframe title="vimeo-player" src="https://player.vimeo.com/video/267028861?h=301a10b95f" width="1485" height="400" frameborder="0" allowfullscreen></iframe>
@@ -211,5 +218,44 @@
         <br>Site designed by Vignesh.in</p>
 	</div>
 </footer>
+
+
+
+<script>
+	
+	let upcomingDate = new Date("mar 02, 2023 12:00:00").getTime();
+
+    setInterval(() => {
+
+    let currentDate = new Date();
+
+    let diff = upcomingDate - currentDate;
+
+    let daysLeft = Math.floor(diff / (1000 * 60 * 60 * 24));
+
+    let hoursLeft = Math.floor((diff % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+
+    let minutesLeft = Math.floor((diff % (1000 * 60 * 60)) / (1000 * 60));
+
+    let secondsLeft = Math.floor((diff % (1000 * 60)) / 1000);
+
+    // if (secondsLeft < 0) {
+    //     stopInterval();
+    // }
+
+    let day = document.getElementById('days');
+    let hour = document.getElementById('hours');
+    let minute = document.getElementById('minutes');
+    let second = document.getElementById('seconds');
+
+    day.innerHTML = daysLeft;
+    hour.innerHTML = hoursLeft;
+    minute.innerHTML = minutesLeft;
+    second.innerHTML = secondsLeft;
+}, 1000);
+</script>
+
+
+
 </body>
 </html>
