--- a/admin/admin html/events/event-upload.html
+++ b/admin/admin html/events/event-upload.html
@@ -140,6 +140,9 @@
     </section>
 
     <script>
+
+
+
         //Changing for Upcoming Events
         let eventUpcoming = document.querySelector(".input_field");
         eventUpcoming.addEventListener("click", showform)
@@ -248,7 +251,7 @@ else if(selectingCategory == upcoming_event){
 
 
 
-
+        console.log("hello world");
     </script>
 <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
 </body>
